Font size added to paragraph

--- a/style.css
+++ b/style.css
@@ -1,1 +1,1 @@
-p {background-color: coral;text-align: center; font-style: italic;}
+p {background-color: coral;text-align: center; font-style: italic; font-size: 24px;}
